feat: crud cho team, leader và cập nhật docs cho team
