# src/app.js
@@ -9,6 +9,7 @@ import { fileURLToPath } from "url";
 import authRoute from "./modules/auth/auth.routes.js";
 import requestRoute from "./modules/requests/request.routes.js";
 import notificationRoute from "./modules/notifications/notification.routes.js";
+import teamRoute from "./modules/teams/team.routes.js";
 import "./modules/notifications/notify.listener.js"; // Initialize event listeners
 import { notFound, errorHandler } from "./middlewares/error.middleware.js";
 
@@ -75,6 +76,7 @@ app.get("/ping", (req, res) => {
 app.use("/api/auth", authRoute);
 app.use("/api/requests", requestRoute);
 app.use("/api/notifications", notificationRoute);
+app.use("/api/teams", teamRoute);
 
 // Error handling middlewares (must be after all routes)
 app.use(notFound);
